--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.39.0
-pandas==2.2.2
-numpy==1.26.4
-yfinance==0.2.40
-requests==2.31.0
-plotly==5.22.0
+streamlit
+pandas
+numpy
+yfinance
+requests
+plotly
+
